--- a/src/blocks/pagination/pagination.pug
+++ b/src/blocks/pagination/pagination.pug
@@ -24,7 +24,8 @@ mixin pagination(mods)
     }
 
   .pagination(class=allMods, aria-label='Page navigation')&attributes(attributes)
-    block
+    .pagination__inner
+      block
 
 
 
