--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -191,12 +191,25 @@ block content
                           ])
           .catalog__list
             +catalog-products
+          +pagination('catalog')(class='mt-20px mb-20px')
+            +pagination-item('Пред.','#','','prev')(disabled)
+            +pagination-item('1','#1',true,'num')
+            +pagination-item('2','#2','','num')
+            +pagination-item('3','#3','','num')
+            +pagination-item('4','#4','','num')(class='hidden md_flex')
+            +pagination-item('5','#5','','num')(class='hidden md_flex')
+            +pagination-item('...')
+            +pagination-item('9','#9','','num')
+            +pagination-item('След.','#','','next')
       .catalog__info.container.text-gray-500.col-start-1.col-end-3.row-start-4.lg_columns-2
         h2.text-xl.text-color-black.mt-0.mb-20px.lg_text-2xl  «Рикта» – это лучшие материалы, качественные российские комплектующие и лаконичный целесообразный дизайн
         p Аппаратная физиотерапия – один из самых щадящих способов лечения и профилактики заболеваний. Нередко её рекомендуют как часть комплексной терапии.  «Рикта» специализируется на производстве физиотерапестических аппаратов с 1980 года.
         p Наша медицинская техника изготавливается по европейским стандартам качества ISO и применяется в травматологии, ортопедии, неврологии, терапии, офтальмологии и других областях медицины. Наша медицинская техника изготавливается по европейским стандартам качества ISO и применяется в травматологии, ортопедии,
         p Аппаратная физиотерапия – один из самых щадящих способов лечения и профилактики заболеваний. Нередко её рекомендуют как часть комплексной терапии.  «Рикта» специализируется на производстве физиотерапестических аппаратов с 1980 года.
         p Наша медицинская техника изготавливается по европейским стандартам качества ISO и применяется в травматологии, ортопедии, неврологии, терапии, офтальмологии и других областях медицины. Наша медицинская техника изготавливается по европейским стандартам качества ISO и применяется в травматологии, ортопедии,
+
+
+
 
 //- block footer
 //-   p footer
