--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,14 +1,84 @@
-//all
+// //all
 
 // html * {
 //   color: red !important;
+//   border-color: red !important;
+//   background-color: transparent !important;
 // }
 
+// .page-header {
+//   border-color: red !important;
+//   background-color: transparent !important;
+// }
+
+// input,
+// select {
+//   background-color: transparent !important;
+// }
+
+// .search-form__input-wrapper,
+// .field-select__wrapper,
+// .field-text__input {
+//   outline: 1px solid red;
+//   background-color: transparent !important;
+// }
+
+// .reviews__item-avatar {
+//   outline: 1px solid red;
+//   img {
+//     opacity: 0;
+//   }
+// }
+
+// .aside-nav__item-title {
+//   background-color: transparent !important;
+// }
+
+// .aside-nav__item {
+//   border-color: red;
+// }
+
+// .faq__answer {
+//   background-color: transparent !important;
+//   outline: 1px solid red;
+// }
+
+// .author__img {
+//   outline: 1px solid red;
+//   img {
+//     opacity: 0;
+//   }
+// }
+
+// .news__img {
+//   outline: 1px solid red;
+//   img {
+//     opacity: 0;
+//   }
+// }
 
 // .nav-link {
 //   color: red !important;
 //   background-color: transparent !important;
 //   border-color: red !important;
+// }
+
+
+// //cure
+
+// .article-index > div {
+//   outline: 1px solid red;
+// }
+
+// //!!! pagination
+
+// .pagination__item {
+//   background-color: transparent !important;
+//   outline: 1px solid red;
+// }
+
+// .pagination {
+//   outline: 1px solid re;
 // }
 
 // //delivery
