--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -26,7 +26,7 @@ $color-gh:                    #24292e;
 
 // Семантические цвета
 
-$text-color:                  $gray-darkest;
+$text-color:                  $tw-black;
 $text-color-muted:            $gray;
 $body-bg:                     $white;
 
